# pretix-pix-manual

./: .update-locales.sh  MANIFEST.in  Makefile  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_pix_manual/: apps.py  payment.py
pretix_pix_manual/locale/de_Informal/LC_MESSAGES/: django.po
pretix_pix_manual/templates/pretix_pix_manual/: payment_pending.html
tests/: test_validate_pix_key.py
